fix: modal position popup with scrollbar

--- a/src/styles/modal.less
+++ b/src/styles/modal.less
@@ -47,6 +47,7 @@
   }
 
   &-position {
+    overflow-x: hidden;
     transition: opacity .3s @zoom-out;
     .@{modal-prefix}-panel {
       transition: transform .3s @zoom-out;
